--- a/views/account.html
+++ b/views/account.html
@@ -7,8 +7,8 @@
             <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
         </div>
         <div class="col-md-6">
-            <router-link to="/account/friends" exact>
-                <button type="button" @click="getfriends()" class="btn btn-secondary w-100">Friends</button>
+            <router-link to="/account/settings" exact>
+                <button type="button" @click="getsettings()" class="btn btn-secondary w-100">Settings</button>
             </router-link>
         </div>
     </div>
