--- a/views/globalchat.html
+++ b/views/globalchat.html
@@ -1,5 +1,5 @@
-{{ define "globalchat_page" }}
-<div class="mx-auto my-2" v-if="opened=='globalchat'">
+{{ define "groupchat_page" }}
+<div class="mx-auto my-2" v-if="opened=='groupchat'">
     {{ template "message_part" }}
     <div id="chatbox" class="card bg-dark chat-room">
         <div class="btn-group">
@@ -36,15 +36,15 @@
                                 </li>
                             </ul> 
                         </div>
-                        <div class="row h-25">
+                        <div class="row">
                             <div class="h-100 col-md-12 my-auto">
                                 <div class="h-75 white">
                                     <div class="h-100 form-group basic-textarea">
-                                        <textarea id="chat-textarea" class="h-75 form-control bg-dark pl-2 my-0 text-white" id="exampleFormControlTextarea2" v-model="netdata.message" rows="3" placeholder="Type your message here..." @keyup.enter="sendglobalchat(netdata.chat.companion, netdata.message)"></textarea>
+                                        <textarea id="chat-textarea" class="h-75 form-control bg-dark pl-2 my-0 text-white" id="exampleFormControlTextarea2" v-model="netdata.message" rows="1" placeholder="Type your message here..." @keyup.enter="sendgroupchat(netdata.chat.companion, netdata.message)"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" @click="sendglobalchat(netdata.chat.companion, netdata.message)" class="h-100 btn bg-success text-white w-100 btn-outline-pink btn-rounded btn-sm waves-effect waves-dark float-right">Send message</button>
+                                    <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" @click="sendgroupchat(netdata.chat.companion, netdata.message)" class="h-100 btn bg-success text-white w-100 btn-outline-pink btn-rounded btn-sm waves-effect waves-dark float-right">Send message</button>
                                 </div>
                             </div>
                         </div>
@@ -56,12 +56,12 @@
     <br>
     <div class="form-group row">
         <div class="col-md-6">
-            <button v-if="switcher!='clear_chat'" @click="nulldata(), setswitch('clear_chat')" type="button" class="btn btn-secondary w-100">Clear Chat</button>
-            <button v-else @click="setswitch('clear_chat')" type="button" class="btn btn-danger w-100">Action</button>
+            <button v-if="switcher!='clear_chat'" @click="nulldata(), setswitch('clear_chat')" type="button" class="btn btn-sm btn-secondary w-100">Clear Chat</button>
+            <button v-else @click="setswitch('clear_chat')" type="button" class="btn btn-sm btn-danger w-100">Action</button>
         </div>
         <div class="col-md-6">
-            <button v-if="switcher!='delete_chat'" @click="nulldata(), setswitch('delete_chat')" type="button" class="btn btn-secondary w-100">Delete Chat</button>
-            <button v-else @click="setswitch('delete_chat')" type="button" class="btn btn-danger w-100">Action</button>
+            <button v-if="switcher!='delete_chat'" @click="nulldata(), setswitch('delete_chat')" type="button" class="btn btn-sm btn-secondary w-100">Delete Chat</button>
+            <button v-else @click="setswitch('delete_chat')" type="button" class="btn btn-sm btn-danger w-100">Action</button>
         </div>
     </div>
     <div v-if="switcher=='clear_chat'" class="text-center">
@@ -72,7 +72,7 @@
             <div class="form-group">
                 <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
             </div>
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="delglobalchat(netdata.chat.companion, userdata.username, userdata.password, 'clear')">Clear Chat</button>
+            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="delgroupchat(netdata.chat.companion, userdata.username, userdata.password, 'clear')">Clear Chat</button>
         </form>
     </div>
     <div v-if="switcher=='delete_chat'" class="text-center">
@@ -83,7 +83,7 @@
             <div class="form-group">
                 <input type="password" class="form-control bg-dark text-light" name="name" placeholder="Password" v-model="userdata.password">
             </div>
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="delglobalchat(netdata.chat.companion, userdata.username, userdata.password, 'delete')">Delete Chat</button>
+            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="delgroupchat(netdata.chat.companion, userdata.username, userdata.password, 'delete')">Delete Chat</button>
         </form>
     </div>
 </div>
