--- a/views/network.html
+++ b/views/network.html
@@ -10,8 +10,8 @@
         </div>
         <div class="form-group row">
             <div class="col-md-6">
-                <router-link :to="{name: 'globalchatlist'}">
-                    <button class="btn btn-secondary w-100" @click="globalchat('null')">Group Chats</button>
+                <router-link :to="{name: 'groupchatlist'}">
+                    <button class="btn btn-secondary w-100" @click="groupchat('null')">Group Chats</button>
                 </router-link>
             </div>
             <div class="col-md-6">
@@ -27,8 +27,8 @@
                 </router-link>
             </div>
             <div class="col-md-6">
-                <router-link to="/network/settings">
-                    <button class="btn btn-secondary w-100" @click="currconnects()">Settings</button>
+                <router-link to="/network/connects">
+                    <button class="btn btn-secondary w-100" @click="currconnects()">Connections</button>
                 </router-link>
             </div>
         </div>
