--- a/internal/applications/messenger/web/template/index.html
+++ b/internal/applications/messenger/web/template/index.html
@@ -14,7 +14,7 @@
 <body class="bg-dark text-white">
     <div class="card bg-dark" style="height:100vh;">
         <div class="card-header d-flex justify-content-between align-items-center p-3">
-            <div class="d-inline">
+            <div class="d-inline d-flex" style="gap: 10px">
                 <a href="/about" class="btn btn-secondary button"><b>HLM</b></a>
                 {{template "header" .}}
             </div>
