--- a/internal/applications/messenger/web/template/about.html
+++ b/internal/applications/messenger/web/template/about.html
@@ -236,38 +236,44 @@ Pri la projekto
                 <ol>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/service"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls"
                                 class="text-info">Hidden Lake Service</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/helpers/traffic"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlt"
                                 class="text-info">Hidden Lake Traffic</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/helpers/encryptor"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hle"
                                 class="text-info">Hidden Lake Encryptor</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/helpers/loader"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hll"
                                 class="text-info">Hidden Lake Loader</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/applications/messenger"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlm"
                                 class="text-info">Hidden Lake Messenger</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/applications/filesharer"
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlf"
                                 class="text-info">Hidden Lake Filesharer</a>;
+                        </p>
+                    </li>
+                    <li>
+                        <p class="text-left">
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlr"
+                                class="text-info">Hidden Lake Remoter</a>;
                         </p>
                     </li>
                 </ol>
