--- a/internal/applications/filesharer/web/template/about.html
+++ b/internal/applications/filesharer/web/template/about.html
@@ -119,7 +119,7 @@ Pri la projekto
                     Teorio de la strukturo de kaŝitaj sistemoj:
                     {{end}}
                     <a href="https://github.com/number571/go-peer/blob/master/docs/theory_of_the_structure_of_hidden_systems.pdf"
-                        class="text-info">theory_of_the_structure_of_hidden_systems.pdf</a>;
+                        class="text-info" target="_blank">theory_of_the_structure_of_hidden_systems.pdf</a>;
                 </p>
                 <p class="text-left">
                     {{if (eq .FLanguage 0)}}
@@ -145,7 +145,7 @@ Pri la projekto
                     Monolita Kriptografia Protokolo:
                     {{end}}
                     <a href="https://github.com/number571/go-peer/blob/master/docs/monolithic_cryptographic_protocol.pdf"
-                        class="text-info">monolithic_cryptographic_protocol.pdf</a>;
+                        class="text-info" target="_blank">monolithic_cryptographic_protocol.pdf</a>;
                 </p>
                 <p class="text-left">
                     {{if (eq .FLanguage 0)}}
@@ -171,7 +171,7 @@ Pri la projekto
                     Abstraktaj anonimaj retoj:
                     {{end}}
                     <a href="https://github.com/number571/go-peer/blob/master/docs/abstract_anonymous_networks.pdf"
-                        class="text-info">abstract_anonymous_networks.pdf</a>;
+                        class="text-info" target="_blank">abstract_anonymous_networks.pdf</a>;
                 </p>
                 <p class="text-left">
                     {{if (eq .FLanguage 0)}}
@@ -194,7 +194,7 @@ Pri la projekto
                     Malcentra ŝlosila interŝanĝa protokolo:
                     {{end}}
                     <a href="https://github.com/number571/go-peer/blob/master/docs/decentralized_key_exchange_protocol.pdf"
-                        class="text-info">decentralized_key_exchange_protocol.pdf</a>;
+                        class="text-info" target="_blank">decentralized_key_exchange_protocol.pdf</a>;
                 </p>
                 <p class="text-left">
                     {{if (eq .FLanguage 0)}}
@@ -215,7 +215,7 @@ Pri la projekto
                     Anonima reto"Kaŝita Lago":
                     {{end}}
                     <a href="https://github.com/number571/hidden-lake/blob/master/docs/hidden_lake_anonymous_network.pdf"
-                        class="text-info">hidden_lake_anonymous_network.pdf</a>;
+                        class="text-info" target="_blank">hidden_lake_anonymous_network.pdf</a>;
                 </p>
             </div>
             <div class="p-3 tab-pane fade" id="pills-source" role="tabpanel" aria-labelledby="pills-source-tab">
@@ -223,55 +223,55 @@ Pri la projekto
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls"
-                                class="text-info">Hidden Lake Service</a>;
+                                class="text-info" target="_blank">Hidden Lake Service</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlc"
-                                class="text-info">Hidden Lake Composite</a>;
+                                class="text-info" target="_blank">Hidden Lake Composite</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hla"
-                                class="text-info">Hidden Lake Adapters</a>;
+                                class="text-info" target="_blank">Hidden Lake Adapters</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlt"
-                                class="text-info">Hidden Lake Traffic</a>;
+                                class="text-info" target="_blank">Hidden Lake Traffic</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hle"
-                                class="text-info">Hidden Lake Encryptor</a>;
+                                class="text-info" target="_blank">Hidden Lake Encryptor</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hll"
-                                class="text-info">Hidden Lake Loader</a>;
+                                class="text-info" target="_blank">Hidden Lake Loader</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlm"
-                                class="text-info">Hidden Lake Messenger</a>;
+                                class="text-info" target="_blank">Hidden Lake Messenger</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlf"
-                                class="text-info">Hidden Lake Filesharer</a>;
+                                class="text-info" target="_blank">Hidden Lake Filesharer</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlr"
-                                class="text-info">Hidden Lake Remoter</a>;
+                                class="text-info" target="_blank">Hidden Lake Remoter</a>;
                         </p>
                     </li>
                 </ol>
