--- a/internal/webui/template/friends.html
+++ b/internal/webui/template/friends.html
@@ -67,6 +67,7 @@ Amikoj
                     </div>
                 </div>
             </form>
+            {{$friendBaseURL:=.FFriendBaseURL}}
             {{range .FFriends}}
             <form class="mb-3" method="POST" action="/friends">
                 <!-- HTML does not support another methods (PUT, DELETE, etc...) -->
@@ -76,7 +77,7 @@ Amikoj
                         <input hidden type="text" name="alias_name" value="{{.}}"
                             class="text-center form-control w-100">
                         <!-- GET -->
-                        <a href="/friends/chat?alias_name={{.}}" class="ellipsis btn btn-secondary button w-100">{{.}}</a>
+                        <a href="{{$friendBaseURL}}?alias_name={{.}}" class="ellipsis btn btn-secondary button w-100">{{.}}</a>
                     </div>
                     <div class="col-md-4 w-25">
                         <input type="submit" name="submit" value="✖" class="btn btn-info w-100">
