--- a/internal/webui/template/index.html
+++ b/internal/webui/template/index.html
@@ -15,7 +15,7 @@
     <div class="card bg-dark" style="height:100vh;">
         <div class="card-header d-flex justify-content-between align-items-center p-3">
             <div class="d-inline">
-                <a href="/about" class="btn btn-secondary button"><b>HLF</b></a>
+                <a href="/about" class="btn btn-secondary button"><b>{{.FAppName}}</b></a>
                 {{template "header" .}}
             </div>
             <div>
