--- a/internal/webui/template/settings.html
+++ b/internal/webui/template/settings.html
@@ -164,7 +164,7 @@ Agordoj
                 <!-- HTML does not support another methods (PUT, DELETE, etc...) -->
                 <input hidden name="method" value="POST">
                 <div class="row mb-3">
-                    <div class="col-md-5 w-50">
+                    <div class="col-md-8 w-75">
                         {{if (eq .FLanguage 0)}}
                         <input type="text" name="host" placeholder="Host"
                             class="text-center form-control bg-dark text-white w-100">
@@ -173,18 +173,6 @@ Agordoj
                             class="text-center form-control bg-dark text-white w-100">
                         {{else if (eq .FLanguage 2)}}
                         <input type="text" name="host" placeholder="Posedanto"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{end}}
-                    </div>
-                    <div class="col-md-3 w-25">
-                        {{if (eq .FLanguage 0)}}
-                        <input type="text" name="port" placeholder="Port"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{else if (eq .FLanguage 1)}}
-                        <input type="text" name="port" placeholder="Порт"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{else if (eq .FLanguage 2)}}
-                        <input type="text" name="port" placeholder="Haveno"
                             class="text-center form-control bg-dark text-white w-100">
                         {{end}}
                     </div>
@@ -203,12 +191,12 @@ Agordoj
                             class="text-center form-control w-100">
                         {{if .FOnline}}
                         <input hidden name="is_node" value="true">
-                        <button disabled type="button" class="btn btn-info w-100"
-                            style="overflow: hidden;">{{.FAddress}}</button>
+                        <input disabled type="text" placeholder="(void)" value="{{.FAddress}}"
+                            class="text-center form-control bg-info text-white w-100">
                         {{else}}
                         <input hidden name="is_node" value="true">
-                        <button disabled type="button" class="btn btn-secondary w-100"
-                            style="overflow: hidden;">{{.FAddress}}</button>
+                        <input disabled type="text" placeholder="(void)" value="{{.FAddress}}"
+                            class="text-center form-control bg-secondary text-white w-100">
                         {{end}}
                     </div>
                     <div class="col-md-4 w-25">
