--- a/internal/webui/template/about.html
+++ b/internal/webui/template/about.html
@@ -226,26 +226,14 @@ Pri la projekto
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hla"
-                                class="text-info" target="_blank">Hidden Lake Adapters</a>;
-                        </p>
-                    </li>
-                    <li>
-                        <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlt"
-                                class="text-info" target="_blank">Hidden Lake Traffic</a>;
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hla_tcp"
+                                class="text-info" target="_blank">Hidden Lake Adapter (TCP)</a>;
                         </p>
                     </li>
                     <li>
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hle"
                                 class="text-info" target="_blank">Hidden Lake Encryptor</a>;
-                        </p>
-                    </li>
-                    <li>
-                        <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hll"
-                                class="text-info" target="_blank">Hidden Lake Loader</a>;
                         </p>
                     </li>
                     <li>
