--- a/internal/webui/template/friends.html
+++ b/internal/webui/template/friends.html
@@ -68,6 +68,16 @@ Amikoj
                 </div>
             </form>
             {{$friendBaseURL:=.FFriendBaseURL}}
+            {{$usedBaseURLBlock:=.FUsedBaseURLBlock}}
+            {{if $usedBaseURLBlock}}
+                <div class="mb-3">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="{{$friendBaseURL}}" class="ellipsis btn btn-secondary button w-100">{{$usedBaseURLBlock}}</a>
+                        </div>
+                    </div>
+                </div>
+            {{end}}
             {{range .FFriends}}
             <form class="mb-3" method="POST" action="/friends">
                 <!-- HTML does not support another methods (PUT, DELETE, etc...) -->
@@ -77,7 +87,7 @@ Amikoj
                         <input hidden type="text" name="alias_name" value="{{.}}"
                             class="text-center form-control w-100">
                         <!-- GET -->
-                        <a href="{{$friendBaseURL}}?alias_name={{.}}" class="ellipsis btn btn-secondary button w-100">{{.}}</a>
+                        <a href="{{$friendBaseURL}}?alias_name={{.}}" class="{{if $usedBaseURLBlock}}disabled{{end}} ellipsis btn btn-secondary button w-100">{{.}}</a>
                     </div>
                     <div class="col-md-4 w-25">
                         <input type="submit" name="submit" value="✖" class="btn btn-info w-100">
