--- a/internal/webui/template/about.html
+++ b/internal/webui/template/about.html
@@ -226,8 +226,8 @@ Pri la projekto
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hla/hla_tcp"
-                                class="text-info" target="_blank">Hidden Lake Adapter (TCP)</a>;
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hla"
+                                class="text-info" target="_blank">Hidden Lake Adapters</a>;
                         </p>
                     </li>
                     <li>
@@ -246,6 +246,18 @@ Pri la projekto
                         <p class="text-left">
                             <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlr"
                                 class="text-info" target="_blank">Hidden Lake Remoter</a>;
+                        </p>
+                    </li>
+                    <li>
+                        <p class="text-left">
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hlp"
+                                class="text-info" target="_blank">Hidden Lake Pinger</a>;
+                        </p>
+                    </li>
+                    <li>
+                        <p class="text-left">
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hln"
+                                class="text-info" target="_blank">Hidden Lake Notifier</a>;
                         </p>
                     </li>
                 </ol>
