--- a/internal/webui/template/index.html
+++ b/internal/webui/template/index.html
@@ -16,6 +16,15 @@
         <div class="card-header d-flex justify-content-between align-items-center p-3">
             <div class="d-inline">
                 <a href="/about" class="btn btn-secondary button"><b>{{.FAppName}}</b></a>
+                {{if .FHeaderAddLink}}
+                    {{if (eq .FLanguage 0)}}
+                    <a href="{{.FHeaderAddLink}}" class="btn btn-secondary button"><b>{{index .FHeaderAddName 0}}</b></a>
+                    {{else if (eq .FLanguage 1)}}
+                    <a href="{{.FHeaderAddLink}}" class="btn btn-secondary button"><b>{{index .FHeaderAddName 1}}</b></a>
+                    {{else if (eq .FLanguage 2)}}
+                    <a href="{{.FHeaderAddLink}}" class="btn btn-secondary button"><b>{{index .FHeaderAddName 2}}</b></a>
+                    {{end}}
+                {{end}}
                 {{template "header" .}}
             </div>
             <div>
