--- a/internal/webui/template/notifier/channels.html
+++ b/internal/webui/template/notifier/channels.html
@@ -1,11 +1,11 @@
 {{define "title"}}
 
 {{if (eq .FLanguage 0)}}
-Friends
+Channels
 {{else if (eq .FLanguage 1)}}
-Друзья
+Каналы
 {{else if (eq .FLanguage 2)}}
-Amikoj
+Kanaloj
 {{end}}
 
 {{end}}
@@ -26,39 +26,27 @@ Amikoj
     <div class="card mb-3 bg-dark">
         <h5 class="card-header text-white bg-secondary p-2">
             {{if (eq .FLanguage 0)}}
-            Friends
+            Channels
             {{else if (eq .FLanguage 1)}}
-            Друзья
+            Каналы
             {{else if (eq .FLanguage 2)}}
-            Amikoj
+            Kanaloj
             {{end}}
         </h5>
         <div class="card-body">
-            <form class="mb-3" method="POST" action="/friends">
+            <form class="mb-3" method="POST" action="/channels">
                 <!-- HTML does not support another methods (PUT, DELETE, etc...) -->
                 <input hidden name="method" value="POST">
                 <div class="row">
-                    <div class="col-md-5 w-50">
+                    <div class="col-md-8 w-75">
                         {{if (eq .FLanguage 0)}}
-                        <input type="text" name="alias_name" placeholder="Alias"
+                        <input type="text" name="key" placeholder="Key"
                             class="text-center form-control bg-dark text-white w-100">
                         {{else if (eq .FLanguage 1)}}
-                        <input type="text" name="alias_name" placeholder="Имя"
+                        <input type="text" name="key" placeholder="Ключ"
                             class="text-center form-control bg-dark text-white w-100">
                         {{else if (eq .FLanguage 2)}}
-                        <input type="text" name="alias_name" placeholder="Nomo"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{end}}
-                    </div>
-                    <div class="col-md-3 w-25">
-                        {{if (eq .FLanguage 0)}}
-                        <input type="text" name="public_key" placeholder="Key"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{else if (eq .FLanguage 1)}}
-                        <input type="text" name="public_key" placeholder="Ключ"
-                            class="text-center form-control bg-dark text-white w-100">
-                        {{else if (eq .FLanguage 2)}}
-                        <input type="text" name="public_key" placeholder="Ŝlosilo"
+                        <input type="text" name="key" placeholder="Ŝlosilo"
                             class="text-center form-control bg-dark text-white w-100">
                         {{end}}
                     </div>
@@ -67,17 +55,17 @@ Amikoj
                     </div>
                 </div>
             </form>
-            {{$friendBaseURL:=.FFriendsBaseURL}}
-            {{range .FFriends}}
-            <form class="mb-3" method="POST" action="/friends">
+            {{$channelsBaseURL:=.FChannelsBaseURL}}
+            {{range .FChannels}}
+            <form class="mb-3" method="POST" action="/channels">
                 <!-- HTML does not support another methods (PUT, DELETE, etc...) -->
                 <input hidden name="method" value="DELETE">
                 <div class="row">
                     <div class="col-md-8 w-75">
-                        <input hidden type="text" name="alias_name" value="{{.}}"
+                        <input hidden type="text" name="key" value="{{.}}"
                             class="text-center form-control w-100">
                         <!-- GET -->
-                        <a href="{{$friendBaseURL}}?alias_name={{.}}" class="{{if (not $friendBaseURL)}}disabled{{end}} ellipsis btn btn-secondary button w-100">{{.}}</a>
+                        <a href="{{$channelsBaseURL}}?key={{.}}" class="{{if (not $channelsBaseURL)}}disabled{{end}} ellipsis btn btn-secondary button w-100">{{.}}</a>
                     </div>
                     <div class="col-md-4 w-25">
                         <input type="submit" name="submit" value="✖" class="btn btn-info w-100">
