--- a/internal/webui/template/about.html
+++ b/internal/webui/template/about.html
@@ -232,26 +232,8 @@ Pri la projekto
                     </li>
                     <li>
                         <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls/hls-messenger"
-                                class="text-info" target="_blank">Hidden Lake Service (Messenger)</a>;
-                        </p>
-                    </li>
-                    <li>
-                        <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls/hls-filesharer"
-                                class="text-info" target="_blank">Hidden Lake Service (Filesharer)</a>;
-                        </p>
-                    </li>
-                    <li>
-                        <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls/hls-remoter"
-                                class="text-info" target="_blank">Hidden Lake Service (Remoter)</a>;
-                        </p>
-                    </li>
-                    <li>
-                        <p class="text-left">
-                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls/hls-pinger"
-                                class="text-info" target="_blank">Hidden Lake Service (Pinger)</a>;
+                            <a href="https://github.com/number571/hidden-lake/tree/master/cmd/hls"
+                                class="text-info" target="_blank">Hidden Lake Services</a>;
                         </p>
                     </li>
                 </ol>
